add/changed to comment icon

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -13,10 +13,10 @@
             <textarea name="comment[text]" id="" cols="30" rows="10"></textarea>
         </div>
         <div class="ui horizontal divider seperator">
-                <i class="football ball icon brown"></i>
-        </div>
+                <i class="comment outline icon"></i>        </div>
         <input type="submit" class="ui green fluid button">
     </form> 
+
     </div>   
 </div>
 
