--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -57,8 +57,7 @@
                         <p><%= comment.text %></p>
                         <p><strong><%= comment.author %></strong> -  <span><%= comment.added.toDateString() %></span> </p>
                         <div class="ui horizontal divider seperator" id="show-divider">
-                                <i class="football ball icon brown"></i>
-                        </div>
+                                <i class="comment outline icon"></i>                        </div>
                 
                     <% }) %>      
                 </div>
