show page back button

--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -63,6 +63,12 @@
                 </div>
             </div>
         </div>
+                <a href="/posts" class="ui button mini center go-back">
+                    Go Back 
+                    <i class="arrow left icon"></i>
+                </a>
+        <div class="clear"></div>
+
     </div>
 </div>
 
