--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -102,6 +102,14 @@ input[type="submit"] {
     margin-bottom: 60px;
 }
 
+.go-back {
+    float: right;
+}
+
+.clear {
+    clear: both;
+}
+
 
 
 
