--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="ui main segment text container outercolored">
+<div class="ui main segment text container outercolored new-container">
     <div class="ui huge header">Add Comment To <%= post.title %></div>
     <div class="ui top attached segment">
     <form action="/posts/<%= post._id %>/comments" class="ui form" method="POST">
@@ -16,6 +16,8 @@
                 <i class="comment outline icon"></i>        </div>
         <input type="submit" class="ui green fluid button">
     </form> 
+
+
 
     </div>   
 </div>
