added back button to all pages

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -16,6 +16,11 @@
                 <i class="comment outline icon"></i>        </div>
         <input type="submit" class="ui green fluid button">
     </form> 
+    <a href="/posts/<%= post._id %>" class="ui button mini center go-back">
+        Go Back 
+        <i class="arrow left icon"></i>
+    </a>
+<div class="clear"></div>
 
 
 
