--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -25,6 +25,12 @@
         </div>
         <input type="submit" class="ui green fluid button">
     </form> 
+    <a href="/links" class="ui button mini center go-back">
+        Go Back 
+        <i class="arrow left icon"></i>
+    </a>
+<div class="clear"></div>
+
     </div>   
 </div>
 
