--- a/views/links/show.ejs
+++ b/views/links/show.ejs
@@ -29,6 +29,12 @@
             <a href="links/new" class="ui button fluid green">Add New Link</a>
 
         </div>
+        <a href="/posts" class="ui button mini center go-back">
+            Go Back 
+            <i class="arrow left icon"></i>
+        </a>
+    <div class="clear"></div>
+    
     </div>
 </div>
 
