--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -21,7 +21,14 @@
         </div>
         <input type="submit" class="ui green fluid button">
     </form>  
+    <a href="/posts" class="ui button mini center go-back">
+        Go Back 
+        <i class="arrow left icon"></i>
+    </a>
+<div class="clear"></div>
+
     </div>  
+
 </div>
 
 
