--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -23,7 +23,7 @@
         <div class="ui horizontal divider seperator">
                 <i class="football ball icon brown"></i>
         </div>
-        <input type="submit" class="ui green fluid button">
+        <input type="submit" class="ui fluid button">
     </form> 
     <a href="/links" class="ui button mini center go-back">
         Go Back 
