--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -17,7 +17,7 @@
             <label for="">Post Content</label>
             <textarea name="post[body]" id="" cols="30" rows="10" required><%= post.body %></textarea>
         </div> 
-        <input type="submit" class="ui red fluid button">
+        <input type="submit" class="ui fluid button">
     </form>   
     </div> 
 </div>
