back button to edit page

--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -18,7 +18,15 @@
             <textarea name="post[body]" id="" cols="30" rows="10" required><%= post.body %></textarea>
         </div> 
         <input type="submit" class="ui fluid button">
-    </form>   
+
+    
+    </form>  
+    <a href="/posts" class="ui button mini center go-back">
+        Go Back 
+        <i class="arrow left icon"></i>
+    </a>
+    <div class="clear"></div>
+
     </div> 
 </div>
 
