--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -80,7 +80,7 @@ body {
 }
 
 
-input[type="text"], textarea {
+input[type="text"], input[type="password"], textarea {
     box-shadow: 0 5px 5px 0 darkgrey !important;
 }
 
