--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
 <div class="ui main segment text container outercolored new-container">
     <div class="ui huge header">Sign Up</div>
     <div class="ui top attached segment">
-    <form action="/register" class="ui form" method="POST">
+    <form action="/signup" class="ui form" method="POST">
         <div class="field required">
             <label for="">Username</label>
             <input type="text" name="username" placeholder="Username">
@@ -15,7 +15,7 @@
         </div>
         <div class="ui horizontal divider seperator">
                 <i class="comment outline icon"></i>        </div>
-        <input type="submit" class="ui green fluid button">
+        <input type="submit" class="ui fluid button">
     </form> 
     <a href="/posts" class="ui button mini center go-back">
         Go Back 
