--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,4 +13,10 @@
                     <a href="/posts/new" class="item">New Post</a>
                     <a href="/links" class="item">Links</a>
                 </div>
+                <div class="right menu">
+                    <a href="/signup" class="ui item">Sign Up</a>
+                    <a href="/signin" class="ui item">Sign In</a>
+                    <a href="/signout" class="ui item">Sign Out</a>
+                  </div>
+    
             </div>
