--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -4,17 +4,17 @@
     <div class="ui huge header">Add Comment To <%= post.title %></div>
     <div class="ui top attached segment">
     <form action="/posts/<%= post._id %>/comments" class="ui form" method="POST">
-        <div class="field required">
+        <!-- <div class="field required">
             <label for="">Name</label>
             <input type="text" name="comment[author]" placeholder="name">
-        </div>
+        </div> -->
         <div class="field required">
             <label for="">Comment</label>
             <textarea name="comment[text]" id="" cols="30" rows="10"></textarea>
         </div>
         <div class="ui horizontal divider seperator">
                 <i class="comment outline icon"></i>        </div>
-        <input type="submit" class="ui green fluid button">
+        <input type="submit" class="ui fluid button">
     </form> 
     <a href="/posts/<%= post._id %>" class="ui button mini center go-back">
         Go Back 
