updated buttons for user

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,7 +1,9 @@
 <% include ./partials/header %>
 
 
-<div class="ui main segment text container outercolored new-container">
+
+
+<div class="ui main segment text container outercolored new-container" id="sign-in-form">
     <div class="ui huge header">Sign in</div>
     <div class="ui top attached segment">
     <form action="/signin" class="ui form" method="POST">
