--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -11,7 +11,10 @@
             <img src="<%= post.image %>" alt="" class="ui centered rounded image">
         </div>
         <div class="description" id="show-body">
-            <p><%- post.body %></p>
+            <p><%= post.body %></p>
+            <em>
+                <p>Submitted By <%= post.author.username %></p>
+            </em>
         </div>
         <% if(currentUser){ %>
         <div class="edit-delete">
