changed button sizes

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -14,9 +14,9 @@
         </div>
         <div class="ui horizontal divider seperator">
                 <i class="comment outline icon"></i>        </div>
-        <input type="submit" class="ui fluid button">
+        <input type="submit" class="ui compact mini button">
     </form> 
-    <a href="/posts/<%= post._id %>" class="ui button mini center go-back">
+    <a href="/posts/<%= post._id %>" class="ui button mini compact go-back">
         Go Back 
         <i class="arrow left icon"></i>
     </a>
