--- a/views/links/show.ejs
+++ b/views/links/show.ejs
@@ -29,10 +29,10 @@
             <% }) %>
 
             <% if(currentUser){ %>
-            <a href="links/new" class="ui button fluid">Add New Link</a>
+            <a href="links/new" class="ui  compact mini button">Add New Link</a>
             <% } %>
         </div>
-        <a href="/posts" class="ui button mini center go-back">
+        <a href="/posts" class="ui button mini compact go-back">
             Go Back 
             <i class="arrow left icon"></i>
         </a>
