--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -18,7 +18,7 @@
                             <p><%- post.body.substring(0, 100) %>.......</p>
                         </div>
                         <div class="extra">
-                            <a href="/posts/<%= post._id %>" class="ui button tiny" id="rm-button">
+                            <a href="/posts/<%= post._id %>" class="ui button compact mini" id="rm-button">
                                 Read More
                             
                                     <i class="angle double right icon"></i>
