--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -17,9 +17,9 @@
         </div>
         <div class="ui horizontal divider seperator">
                 <i class="comment outline icon"></i>        </div>
-        <input type="submit" class="ui fluid button" value="Sign in">
+        <input type="submit" class="ui button mini compact" value="Sign in" id="sign-in-submit">
     </form> 
-    <a href="/posts" class="ui button mini center go-back">
+    <a href="/posts" class="ui button mini go-back compact">
         Go Back 
         <i class="arrow left icon"></i>
     </a>
