--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -23,9 +23,9 @@
         <div class="ui horizontal divider seperator">
                 <i class="football ball icon brown"></i>
         </div>
-        <input type="submit" class="ui fluid button">
+        <input type="submit" class="ui compact mini button">
     </form> 
-    <a href="/links" class="ui button mini center go-back">
+    <a href="/links" class="ui button mini compact go-back">
         Go Back 
         <i class="arrow left icon"></i>
     </a>
