--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -17,11 +17,11 @@
             <label for="">Post Content</label>
             <textarea name="post[body]" id="" cols="30" rows="10" required><%= post.body %></textarea>
         </div> 
-        <input type="submit" class="ui fluid button">
+        <input type="submit" class="ui compact mini button">
 
     
     </form>  
-    <a href="/posts" class="ui button mini center go-back">
+    <a href="/posts" class="ui button mini compact go-back">
         Go Back 
         <i class="arrow left icon"></i>
     </a>
