--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -19,9 +19,9 @@
         <div class="ui horizontal divider seperator">
                 <i class="football ball icon brown"></i>
         </div>
-        <input type="submit" class="ui fluid button">
+        <input type="submit" class="ui compact mini button">
     </form>  
-    <a href="/posts" class="ui button mini center go-back">
+    <a href="/posts" class="ui button mini compact go-back">
         Go Back 
         <i class="arrow left icon"></i>
     </a>
