--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,16 @@
 
       </div> -->
 
-
     
+    <script>
+      function commentsClick() {
+        var commentsDiv = document.getElementById('view-comments');
+        if(commentsDiv.style.display === 'none') {
+          commentsDiv.style.display === 'block';
+        } else {
+          commentsDiv.style.display === 'none';
+        }
+      }
+    </script>
     </body>
 </html>
