added flash-connect, required it and got it going on certain routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,3 +25,19 @@
                   </div>
     
             </div>
+
+            <!-- <% if(error && error.length > 0){ %> -->
+                <div class="ui negative message container">
+                    <div class="header">
+                      <%= error %>
+                    </div>
+                </div>
+                <!-- <% } %> -->
+        
+                <!-- <% if(success && success.length > 0){ %> -->
+                <div class="ui success message container">
+                    <div class="header">
+                      <%= success %>
+                    </div>
+                </div>
+                <!-- <% } %> -->
