--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -129,7 +129,8 @@ input[type="submit"] {
 }
 
 .ui.message {
-    margin: 5em 0 -6em 0;
+    margin: 6em 0 -6em 0;
+    box-shadow: 0 5px 5px 0 darkgrey !important;
 
 }
 
