--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
             </div>
 
             <!-- <% if(error && error.length > 0){ %> -->
-                <div class="ui negative message container">
+                <div class="ui negative tiny message container">
                     <div class="header">
                       <%= error %>
                     </div>
@@ -35,7 +35,7 @@
                 <!-- <% } %> -->
         
                 <!-- <% if(success && success.length > 0){ %> -->
-                <div class="ui success message container">
+                <div class="ui success tiny message container">
                     <div class="header">
                       <%= success %>
                     </div>
