created routes directory and transferred routes to new js files

--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -81,6 +81,9 @@
                     <span class="ui button mini compact" id="comment-link"><a href="/posts/<%= post._id %>/comments/new">Add Comment</a></span>
 
             </div>
+            <div class="ui divider">
+                                           </div>
+
             <div class="ui top attached segment" id="view-comments">
                 <div class="item">
 
