--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,14 @@
 <html>
     <head>
         <title>
-            FF Blog
+            F-F-Blog
         </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" type="text/css">
         <link rel="stylesheet" href="/stylesheets/app.css">
         <body>
             <div class="ui fixed menu" id="navbar">
                 <div class="ui container">
-                    <div class="header item"><i class="football ball icon"></i>FF Blog</div>
+                    <div class="header item"><i class="football ball icon"></i>F-F-Blog</div>
 
                     <a href="/posts" class="item">Home</a>
                     <a href="/posts/new" class="item">New Post</a>
