--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <div class="ui main container segment outercolored" id="index-container">
-    <div class="ui huge header">FF Blog</div>
+    <div class="ui huge header">F-F-Blog</div>
     <div class="ui top attached segment">
         <div class="ui items">
             <% posts.reverse().forEach(function(post){ %>
