--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -10,7 +10,7 @@
         </div>
         <div class="field required">
             <label for="">URL</label>
-            <input type="text" name="link[url]" placeholder="url">
+            <input type="text" name="link[site]" placeholder="url">
         </div>
         <div class="field required">
             <label for="">Description</label>
