--- a/views/links/show.ejs
+++ b/views/links/show.ejs
@@ -12,7 +12,7 @@
                         </div>
                         <div class="content">
                             <div class="header">
-                                <a href="<%= link.url %>"><%= link.name %></a>
+                                <a href="<%= link.site %>"><%= link.name %></a>
                                 <div class="meta right floated">
                                     <small>Added: <%= link.added.toDateString() %></small>
                                 </div>                
@@ -21,7 +21,7 @@
                                 <p><%= link.description %></p>
                             </div>
                             <div class="extra">
-                                <a href="<%= link.url %>"><p>Visit site <i class="right chevron icon red"></i></p></a>
+                                <a href="<%= link.site %>"><p>Visit site <i class="right chevron icon red"></i></p></a>
                             </div>
                         </div>
         
