--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -35,9 +35,55 @@
 
             <% }) %>
         </div>
+            <!-- pagination -->
+            <div class="ui column stackable center page grid">
+    <div class="ui pagination menu" id="pagination">
+            <% if (pages && pages > 0) { %>
+                <% if (current == 1) { %>
+                <a class="disabled item">First</a>
+                <% } else { %>
+                <a class="item" href="/posts">First</a>
+                <% } %>
+         
+                <% if (current == 1) { %>
+                <a class="disabled item">«</a>
+                <% } else { %>
+                <a class="item" href="/posts?page=<%= Number(current) - 1 %>">«</a>
+                <% } %>
+         
+                <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+                <% if (i !== 1) { %>
+                <a class="disabled item">...</a>
+                <% } %>
+                <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
+                <% if (i == current) { %>
+                <a class="item" href="/posts?page=<%= i %>"><%= i %></a>
+                <% } else { %>
+                <a class="item" href="/posts?page=<%= i %>"><%= i %></a>
+                <% } %>
+                <% if (i == Number(current) + 4 && i < pages) { %>
+                <a class="disabled item">...</a>
+                <% } %>
+                <% } %>
+         
+                <% if (current == pages) { %>
+                <a class="disabled item">»</a>
+                <% } else { %>
+                <a class="item" href="/posts?page=<%= Number(current) + 1 %>">»</a>
+                <% } %>
+         
+                <% if (current == pages) { %>
+                <a class="disabled item">Last</a>
+                <% } else { %>
+                <a class="item" href="/posts?page=<%= pages %>">Last</a>
+                <% } %>
+            
+            <% } %>
+    </div>
+</div>
+
     </div>
 
-    pagination
 </div>
     
 <% include ../partials/footer %>
