fixed pagination display order

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -4,7 +4,7 @@
     <div class="ui huge header">F-F-Blog</div>
     <div class="ui top attached segment">
         <div class="ui items">
-            <% posts.reverse().forEach(function(post){ %>
+            <% posts.forEach(function(post){ %>
                 <div class="item">
                     <div class="image">
                         <img src="<%= post.image %>" alt="">
