added email to user

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,10 +5,10 @@
     <div class="ui huge header">Sign Up</div>
     <div class="ui top attached segment">
     <form action="/signup" class="ui form" method="POST">
-        <!-- <div class="field required">
+        <div class="field required">
             <label for="">Email</label>
             <input type="text" name="email" placeholder="Email">
-        </div> -->
+        </div>
         <div class="field required">
             <label for="">Username</label>
             <input type="text" name="username" placeholder="Username">
