sharethis in header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
         </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" type="text/css">
         <link rel="stylesheet" href="/stylesheets/app.css">
+        <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5e791ec04660ca00143c107f&product=sticky-share-buttons&cms=website' async='async'></script>
         <body>
             <div class="ui fixed menu" id="navbar">
                 <div class="ui container">
